--- a/src/assets/style/cmps/_AppHeader.scss
+++ b/src/assets/style/cmps/_AppHeader.scss
@@ -2,6 +2,8 @@
     background-color: $clr1;
     color: $clr1bg;
     padding: 1em;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    
     
     .app-nav {
         display: flex;
